adding dragon image

--- a/dragonattack.html
+++ b/dragonattack.html
@@ -9,8 +9,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Dragon Attack </title>
+        <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
     </head> 
     <body> 
         <h1> Dragon Attack </h1>
+        <p> 
+            Dragon pic. 
+        <img src= "dragonclicker.jpg" alt = "dragon" /> 
+        <br /> 
+        <h2> Click the dragon to generate a Youtube video. </h2>
+
+        </p>
     </body> 
 </html>
