adding dragon image

--- a/dragonattack.html
+++ b/dragonattack.html
@@ -15,9 +15,9 @@
         <h1> Dragon Attack </h1>
         <p> 
             Dragon pic. 
-        <img src= "dragonclicker.jpg" alt = "dragon" /> 
+        <img src= "dragonclicker.png" alt = "dragon" /> 
         <br /> 
-        <h2> Click the dragon to generate a Youtube video. </h2>
+        <h4> Click the dragon to generate a Youtube video. </h4>
 
         </p>
     </body> 
