adding dragon image

--- a/dragonattack.html
+++ b/dragonattack.html
@@ -14,8 +14,7 @@
     <body> 
         <h1> Dragon Attack </h1>
         <p> 
-            Dragon pic. 
-        <img src= "dragonclicker.png" alt = "dragon" /> 
+        <img src= "dragonclicker.png" alt = "dragon" class="center"/> 
         <br /> 
         <h4> Click the dragon to generate a Youtube video. </h4>
 
