--- a/dragonattack.html
+++ b/dragonattack.html
@@ -10,6 +10,7 @@
         <meta charset="UTF-8">
         <title>Dragon Attack </title>
         <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
+        <link rel = "stylesheet" href="dragonstyle.css"> 
     </head> 
     <body> 
         <h1> Dragon Attack </h1>
