adding dragon image

--- a/dragonattack.html
+++ b/dragonattack.html
@@ -13,7 +13,7 @@
         <link rel = "stylesheet" href="dragonstyle.css"> 
     </head> 
     <body> 
-        <h1> Dragon Attack </h1>
+        <h1 align="center"> Dragon Attack </h1>
         <p> 
         <img src= "dragonclicker.png" alt = "dragon" class="center"/> 
         <br /> 
