--- a/dragonattack.html
+++ b/dragonattack.html
@@ -17,7 +17,7 @@
         <p> 
         <img src= "dragonclicker.png" alt = "dragon" class="center"/> 
         <br /> 
-        <h4> Click the dragon to generate a Youtube video. </h4>
+        <h4 align="center"> Click the dragon to generate a Youtube video. </h4>
 
         </p>
     </body> 
