--- a/dragonattack.html
+++ b/dragonattack.html
@@ -15,7 +15,7 @@
     <body> 
         <h1 align="center"> Dragon Attack </h1>
         <p> 
-        <img src= "dragonclicker.png" alt = "dragon" class="center"/> 
+        <img src= "dragonclicker.png" alt = "dragon" class="center"  data-video="http://www.youtube.com/embed/zP_D_YKnwi0?autoplay=1"> /> 
         <br /> 
         <h4 align="center"> Click the dragon to generate a Youtube video. </h4>
 
