--- a/dragonattack.html
+++ b/dragonattack.html
@@ -10,7 +10,8 @@
         <meta charset="UTF-8">
         <title>Dragon Attack </title>
         <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
-        <link rel = "stylesheet" href="dragonstyle.css"> 
+        <link rel = "stylesheet" href="dragonstyle.css">
+        <script src="dragonjav.js"></script>  
     </head> 
     <body> 
         <h1 align="center"> Dragon Attack </h1>
