--- a/dragonattack.html
+++ b/dragonattack.html
@@ -16,7 +16,7 @@
     <body> 
         <h1 align="center"> Dragon Attack </h1>
         <p> 
-        <img src= "dragonclicker.png" alt = "dragon" class="center"  data-video="http://www.youtube.com/embed/zP_D_YKnwi0?autoplay=1"> /> 
+        <img src="http://www.gravatar.com/avatar/48231943117b8e0d0db0abdcb57a9032?s=32&d=identicon&r=PG" data-video="http://www.youtube.com/embed/zP_D_YKnwi0?autoplay=1"> 
         <br /> 
         <h4 align="center"> Click the dragon to generate a Youtube video. </h4>
 
