--- a/dragonattack.html
+++ b/dragonattack.html
@@ -27,7 +27,7 @@
             }
         </script>
         <div onclick="actualNextSibling(this).style.display='block'; this.style.display='none'">
-            <img src="splash.jpg" alt="splash" style="cursor: pointer" />
+            <img src="dragonclicker.png" alt="dragon" style="cursor: pointer" class="center"  />
         </div>
         <div style="display: none">
             <iframe width="440" height="248" src="//www.youtube.com/embed/9FOZEbEpyA8?rel=0&autoplay=1"frameborder="0" allowfullscreen></iframe>
