--- a/dragonattack.html
+++ b/dragonattack.html
@@ -17,21 +17,20 @@
     <body> 
         <h1 align="center"> Dragon Attack </h1>
         <p> 
-        <div id="video"></div>
         <br /> 
-        <h4 align="center"> Click the dragon to generate a Youtube video. </h4>
         <script type="text/javascript">
             function actualNextSibling(el) {    // needed to smooth out default firefox/IE behavior
                 do { el = el.nextSibling } while (el && el.nodeType !== 1);
                     return el;
             }
         </script>
-        <div onclick="actualNextSibling(this).style.display='block'; this.style.display='none'">
-            <img src="dragonclicker.png" alt="dragon" style="cursor: pointer" class="center"  />
+        <div onclick="dragonImage(this).style.display='block'; this.style.display='none'">
+            <img src="dragonclicker.png" alt="dragon" style="cursor: pointer" class="center"/>
         </div>
         <div style="display: none">
-            <iframe width="440" height="248" src="//www.youtube.com/embed/9FOZEbEpyA8?rel=0&autoplay=1"frameborder="0" allowfullscreen></iframe>
+            <iframe width="800" height="600" src="//www.youtube.com/embed/9FOZEbEpyA8?rel=0&autoplay=1"frameborder="0" class="center" allowfullscreen></iframe>
         </div>
+        <h4 align="center"> Click the dragon to generate a Youtube video. </h4>
         </p>
     </body> 
 </html>
