--- a/dragonattack.html
+++ b/dragonattack.html
@@ -19,8 +19,8 @@
         <p> 
         <br /> 
         <script type="text/javascript">
-            function actualNextSibling(el) {    // needed to smooth out default firefox/IE behavior
-                do { el = el.nextSibling } while (el && el.nodeType !== 1);
+            function dragonImage(el) {
+                do { el = el.dragonImage } while (el && el.nodeType !== 1);
                     return el;
             }
         </script>
