--- a/dragonattack.html
+++ b/dragonattack.html
@@ -19,16 +19,16 @@
         <p> 
         <br /> 
         <script type="text/javascript">
-            function dragonImage(el) {
-                do { el = el.dragonImage } while (el && el.nodeType !== 1);
+            function actualNextSibling(el) {    // needed to smooth out default firefox/IE behavior
+                do { el = el.nextSibling } while (el && el.nodeType !== 1);
                     return el;
             }
         </script>
-        <div onclick="dragonImage(this).style.display='block'; this.style.display='none'">
-            <img src="dragonclicker.png" alt="dragon" style="cursor: pointer" class="center"/>
+        <div onclick="actualNextSibling(this).style.display='block'; this.style.display='none'">
+            <img src="dragonclicker.png" alt="dragon" style="cursor: pointer" class="center"  />
         </div>
         <div style="display: none">
-            <iframe width="800" height="600" src="//www.youtube.com/embed/9FOZEbEpyA8?rel=0&autoplay=1"frameborder="0" class="center" allowfullscreen></iframe>
+            <iframe width="440" height="248" src="//www.youtube.com/embed/9FOZEbEpyA8?rel=0&autoplay=1"frameborder="0" allowfullscreen></iframe>
         </div>
         <h4 align="center"> Click the dragon to generate a Youtube video. </h4>
         </p>
