--- a/dragonattack.html
+++ b/dragonattack.html
@@ -28,7 +28,7 @@
             <img src="dragonclicker.png" alt="dragon" style="cursor: pointer" class="center"  />
         </div>
         <div style="display: none">
-            <iframe width="440" height="248" src="//www.youtube.com/embed/9FOZEbEpyA8?rel=0&autoplay=1"frameborder="0" allowfullscreen></iframe>
+            <iframe width="440" height="248" src="//www.youtube.com/embed/9FOZEbEpyA8?rel=0&autoplay=1"frameborder="0" class="center" allowfullscreen></iframe>
         </div>
         <h4 align="center"> Click the dragon to generate a Youtube video. </h4>
         </p>
