--- a/dragonattack.html
+++ b/dragonattack.html
@@ -28,7 +28,7 @@
             <img src="dragonclicker.png" alt="dragon" style="cursor: pointer" class="center"  />
         </div>
         <div style="display: none">
-            <iframe width="440" height="248" src="https://randomyoutube.net/api/getvid?api_token=finalprojkey"frameborder="0" class="center" allowfullscreen></iframe>
+            <iframe width="440" height="248" src="https://randomyoutube.net/api/getvid?api_token=BCNylHa8qs7BRDgYhIXVuBzNeAv29HTxSLXZhDScUnQDz2aF7bi96qYqh4wj"frameborder="0" class="center" allowfullscreen></iframe>
         </div>
         <h4 align="center"> Click the dragon to generate a Youtube video. </h4>
         </p>
