--- a/dragon.html
+++ b/dragon.html
@@ -14,9 +14,8 @@
     </head>
     <body onload="initApplication()">
         <h1 align="center">Dragon Attack</h1> 
-            <button type="button" onclick="importContacts()">Load Links</button><br><br>
+            <button class="center main" type="button" size="30" onclick="initVidRequest()">Request your video. </button><br><br>
             <br><br>
-
             <table>
             <tr>
                 <td>Name:</td>
@@ -27,21 +26,38 @@
         </table>
 
         <br>
-        <button type="button" onclick="previous()">Previous</button>
-        <button type="button" autofocus onclick="next()">Next</button><br><br>
+        <button type="button" class="button" onclick="previous()">Previous</button>
+        <button type="button" class="button" autofocus onclick="next()">Next</button><br><br>
         <p id="statusID"></p>
         <br><br><hr>
         <h3> Now attack the dragon. </h3>
-        <img src="dragonclicker.png" data-video="http://www.youtube.com/embed/zP_D_YKnwi0?autoplay=1">
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+        <img src="sword.png" class="relative"> 
+        <script type="text/javascript">
+            function clickAllower(el) {  
+                do { el = el.nextSibling } while (el && el.nodeType !== 1);
+                    return el;
+            }
+        </script>
+        <div onclick="clickAllower(this).style.display='block'; this.style.display='none'">
+            <img src="dragonclicker.png" class="dragoncenter main" alt="" style="cursor: pointer" />
+        </div>
+        <div style="display: none">
+            <iframe width="440" height="248" src="https://www.youtube.com/embed/CbwYZCga50U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
+            </div> 
+        <h3> Crowd not cheering? Make them!</h3>
+        <script> 
+        function play(){ 
+            var audio = document.getElementById("audio"); 
+            audio.play(); 
+        }
+        </script> 
+        <input type="button" value="play" onclick="play()"> 
+        <audio id="audio" src="cheer.mp3"></audio> 
+<br><br><hr> 
         URLs:<p id="indexID"></p>
         Names:<p id="linksID"></p>
+        <audio autoplay loop> 
+                <source src="cheer.mp3"> 
+            </audio>
     </body>
 </html>
